# erpocr_integration

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CROSS_APP_SURFACE.md  FLEET_DASHBOARD_DATA_SPEC.md  LICENSE  OCR_Fleet_Slip_Guide.md  OCR_Quick_Start_Guide.md  OCR_Statement_Guide.md  OCR_User_Guide.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: SHELL_INTEGRATION_REPORT.md  architecture.md  implementation-patterns.md
docs/architecture/: DECISIONS.md  OPEN-QUESTIONS.md
docs/deploy-requests/: DEPLOY-REQUEST-ERP-OCR-v1.10.0-2026-07-13.md
docs/handbacks/: ARCHITECT-BOOTSTRAP-GPT-2026-07-12.md  ARCHITECT-CLOSE-ERP-P2-PASS2-2026-07-13.md  ARCHITECT-CLOSE-ERP-P2-RUNTIME-GO-v1.10.0-2026-07-13.md  ARCHITECT-CLOSE-ERP-P2-SOURCE-PASSR-2026-07-13.md  CODE-KICKOFF-ERP-P2-1-DN-PO-SCHEDULE-2026-07-13.md  CODE-KICKOFF-ERP-P2-2-CSRF-2026-07-13.md  CODE-KICKOFF-ERP-P2-3-STATEMENT-QUEUE-2026-07-13.md  HANDBACK-ERP-P2-1-DN-PO-SCHEDULE-2026-07-13.md  HANDBACK-ERP-P2-2-CSRF-2026-07-13.md  HANDBACK-ERP-P2-3-STATEMENT-QUEUE-2026-07-13.md  HANDBACK-GROK-DRIVE-CONNECTION-ERROR-2026-07-12.md  handback-backlog-sweep-v1.8-2026-07-10.md  handback-backlog-sweep-v1.8-rework-2026-07-10.md  handback-fleet-slip-driver-perm-2026-07-07.md  handback-p4-slip-upload-contract-2026-06-11.md  handback-starpops-accounts-foldin-2026-07-09-rework.md  handback-starpops-accounts-foldin-2026-07-09.md  handback-v190-invoice-path-2026-07-10.md
erpocr_integration/: api.py  dn_api.py  exceptions.py  fleet_api.py  hooks.py  install.py  modules.txt  patches.txt  statement_api.py  stats_api.py
erpocr_integration/dashboard/: permission.py
frontend/: index.html  package-lock.json  package.json  proxyOptions.ts  tsconfig.json  vite.config.ts
(+98 files in other folders)
